add: final exps

--- a/quick.ipynb
+++ b/quick.ipynb
@@ -2,6 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure()\n",
+    "fig.add_vline()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
